[gd_scene load_steps=29 format=3 uid="uid://ctcumrw8jrht"]

[ext_resource type="Script" path="res://combat/scene/Combat.gd" id="1_6tv01"]
[ext_resource type="Theme" uid="uid://cu2c5rnghr6e2" path="res://art/theme/new_theme.tres" id="1_f5rn2"]
[ext_resource type="Script" path="res://combat/actor/Player.gd" id="1_sflhy"]
[ext_resource type="Script" path="res://combat/actor/Enemy.gd" id="2_mj7ad"]
[ext_resource type="PackedScene" uid="uid://cbn4igbnqmkil" path="res://combat/util/CombatManager.tscn" id="4_l55h8"]
[ext_resource type="PackedScene" uid="uid://c84dm2wmi7hvj" path="res://combat/hud/CastBar.tscn" id="5_yh8wn"]
[ext_resource type="PackedScene" uid="uid://bp38hjotenmy4" path="res://combat/hud/radar.tscn" id="6_th5sy"]
[ext_resource type="PackedScene" uid="uid://dk5oytxi62ids" path="res://combat/hud/HealthBar.tscn" id="7_n8v7k"]
[ext_resource type="Script" path="res://combat/hud/BigEnemySprite.gd" id="7_sxnab"]
[ext_resource type="Texture2D" uid="uid://c2tvvpousoq80" path="res://art/combat/player_silhouette.png" id="8_xfxku"]
[ext_resource type="Script" path="res://combat/hud/BigPlayerSprite.gd" id="9_h8oon"]
[ext_resource type="Script" path="res://combat/util/AnimationManager.gd" id="10_6l13k"]
[ext_resource type="Script" path="res://combat/util/WarningManager.gd" id="11_atr0g"]
[ext_resource type="Texture2D" uid="uid://dr1hw3nsnbb2b" path="res://art/combat/danger_panel.png" id="12_6momg"]
[ext_resource type="Script" path="res://combat/hud/WarningSprite_Player.gd" id="13_kxryw"]
[ext_resource type="Texture2D" uid="uid://x4jtmox8c8gi" path="res://art/combat/side_panel.png" id="14_upo2c"]
[ext_resource type="PackedScene" uid="uid://b4lk70r2fvrfs" path="res://combat/hud/input/InputDisplay.tscn" id="17_gjpcg"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_dmas6"]
load_path = "res://.godot/imported/skeleton_spear.png-ffdc3a3fa9e04d0fdc16576652e8227c.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_evc8h"]
atlas = SubResource("CompressedTexture2D_dmas6")
region = Rect2(256, 0, 256, 256)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_an75c"]
load_path = "res://.godot/imported/skeleton_spear.png-ffdc3a3fa9e04d0fdc16576652e8227c.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_lpthw"]
atlas = SubResource("CompressedTexture2D_an75c")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_r475d"]
atlas = SubResource("CompressedTexture2D_an75c")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_yatbm"]
atlas = SubResource("CompressedTexture2D_an75c")
region = Rect2(256, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_uqp0l"]
atlas = SubResource("CompressedTexture2D_an75c")
region = Rect2(0, 256, 256, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_fgj0i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_evc8h")
}],
"loop": true,
"name": &"back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lpthw")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r475d")
}],
"loop": true,
"name": &"front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yatbm")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uqp0l")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_gk418"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_xfxku")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Gradient" id="Gradient_mr6cj"]
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_c3ry5"]
gradient = SubResource("Gradient_mr6cj")
width = 64

[node name="Combat" type="Control"]
custom_minimum_size = Vector2(1152, 648)
layout_mode = 3
anchors_preset = 0
theme = ExtResource("1_f5rn2")
script = ExtResource("1_6tv01")

[node name="Player" type="Node" parent="." node_paths=PackedStringArray("target_other")]
script = ExtResource("1_sflhy")
max_health = 10.0
health = 10.0
target_other = NodePath("../Enemy")

[node name="Enemy" type="Node" parent="." node_paths=PackedStringArray("target_other")]
script = ExtResource("2_mj7ad")
max_health = 5.0
health = 5.0
target_other = NodePath("../Player")

[node name="CombatManager" parent="." node_paths=PackedStringArray("player", "enemy") instance=ExtResource("4_l55h8")]
player = NodePath("../Player")
enemy = NodePath("../Enemy")

[node name="Health_Enemy" parent="." node_paths=PackedStringArray("combatant") instance=ExtResource("7_n8v7k")]
layout_mode = 1
anchors_preset = 10
anchor_top = 0.0
anchor_bottom = 0.0
offset_top = 0.0
offset_bottom = 1.0
grow_vertical = 1
combatant = NodePath("../Enemy")

[node name="Health_Player" parent="." node_paths=PackedStringArray("combatant") instance=ExtResource("7_n8v7k")]
layout_mode = 1
offset_top = -1.0
combatant = NodePath("../Player")
health_bar_color = Color(0, 0.392157, 0, 1)

[node name="CastBar_Enemy" parent="." node_paths=PackedStringArray("combatant") instance=ExtResource("5_yh8wn")]
layout_mode = 1
anchor_top = 0.15
anchor_bottom = 0.15
offset_top = 0.0
offset_bottom = 0.0
combatant = NodePath("../Enemy")

[node name="CastBar_Player" parent="." node_paths=PackedStringArray("combatant") instance=ExtResource("5_yh8wn")]
layout_mode = 1
anchor_top = 0.85
anchor_bottom = 0.85
offset_top = 0.0
offset_bottom = 0.0
combatant = NodePath("../Player")

[node name="Radar" parent="." node_paths=PackedStringArray("player", "enemy", "warning_manager") instance=ExtResource("6_th5sy")]
position = Vector2(996, 200)
player = NodePath("../Player")
enemy = NodePath("../Enemy")
warning_manager = NodePath("../WarningManager")

[node name="BigEnemySprite" type="AnimatedSprite2D" parent="." node_paths=PackedStringArray("player", "enemy")]
z_index = -2
position = Vector2(575, 300)
sprite_frames = SubResource("SpriteFrames_fgj0i")
animation = &"front"
script = ExtResource("7_sxnab")
player = NodePath("../Player")
enemy = NodePath("../Enemy")

[node name="BigPlayerSprite" type="AnimatedSprite2D" parent="."]
z_index = -1
position = Vector2(579, 495)
sprite_frames = SubResource("SpriteFrames_gk418")
script = ExtResource("9_h8oon")

[node name="AnimationManager" type="Node" parent="." node_paths=PackedStringArray("enemy", "player", "enemy_sprite", "player_sprite")]
script = ExtResource("10_6l13k")
enemy = NodePath("../Enemy")
player = NodePath("../Player")
enemy_sprite = NodePath("../BigEnemySprite")
player_sprite = NodePath("../BigPlayerSprite")

[node name="WarningManager" type="Node" parent="." node_paths=PackedStringArray("enemy")]
script = ExtResource("11_atr0g")
enemy = NodePath("../Enemy")

[node name="Warnings" type="Node2D" parent="."]
visible = false

[node name="Front" type="Node2D" parent="Warnings"]

[node name="WarningSprite_In" type="Sprite2D" parent="Warnings/Front" node_paths=PackedStringArray("player", "warning_manager")]
modulate = Color(1, 1, 1, 0.498039)
position = Vector2(585, 493)
scale = Vector2(1.2, 1.2)
texture = ExtResource("12_6momg")
script = ExtResource("13_kxryw")
player = NodePath("../../../Player")
position_offset = Vector2i(0, -1)
warning_manager = NodePath("../../../WarningManager")

[node name="WarningSprite_In2" type="Sprite2D" parent="Warnings/Front" node_paths=PackedStringArray("player", "warning_manager")]
modulate = Color(1, 1, 1, 0.498039)
position = Vector2(586, 428)
scale = Vector2(0.8, 0.8)
texture = ExtResource("12_6momg")
script = ExtResource("13_kxryw")
player = NodePath("../../../Player")
position_offset = Vector2i(0, -2)
warning_manager = NodePath("../../../WarningManager")

[node name="Sides_CloseRange" type="Node2D" parent="Warnings"]

[node name="WarningSprite_Left" type="Sprite2D" parent="Warnings/Sides_CloseRange" node_paths=PackedStringArray("player", "warning_manager")]
modulate = Color(1, 1, 1, 0.498039)
position = Vector2(269, 446)
rotation = -3.14159
scale = Vector2(6.1342, 2.60641)
texture = ExtResource("14_upo2c")
script = ExtResource("13_kxryw")
player = NodePath("../../../Player")
position_offset = Vector2i(1, 0)
visible_ranges = Array[int]([1])
warning_manager = NodePath("../../../WarningManager")

[node name="WarningSprite_Right" type="Sprite2D" parent="Warnings/Sides_CloseRange" node_paths=PackedStringArray("player", "warning_manager")]
modulate = Color(1, 1, 1, 0.498039)
position = Vector2(887, 442)
rotation = 3.14159
scale = Vector2(-5.76205, 2.451)
texture = ExtResource("14_upo2c")
script = ExtResource("13_kxryw")
player = NodePath("../../../Player")
position_offset = Vector2i(-1, 0)
visible_ranges = Array[int]([1])
warning_manager = NodePath("../../../WarningManager")

[node name="WarningSprite_Left_Out" type="Sprite2D" parent="Warnings/Sides_CloseRange" node_paths=PackedStringArray("player", "warning_manager")]
modulate = Color(1, 1, 1, 0.498039)
position = Vector2(-95, 455)
rotation = -3.14159
scale = Vector2(6.1342, 4.59473)
texture = ExtResource("14_upo2c")
script = ExtResource("13_kxryw")
player = NodePath("../../../Player")
position_offset = Vector2i(1, 1)
visible_ranges = Array[int]([1])
warning_manager = NodePath("../../../WarningManager")

[node name="WarningSprite_Right_Out" type="Sprite2D" parent="Warnings/Sides_CloseRange" node_paths=PackedStringArray("player", "warning_manager")]
modulate = Color(1, 1, 1, 0.498039)
position = Vector2(1238, 453)
rotation = 3.14159
scale = Vector2(-5.76205, 5.16564)
texture = ExtResource("14_upo2c")
script = ExtResource("13_kxryw")
player = NodePath("../../../Player")
position_offset = Vector2i(-1, 1)
visible_ranges = Array[int]([1])
warning_manager = NodePath("../../../WarningManager")

[node name="Sides_MiddleRange" type="Node2D" parent="Warnings"]

[node name="WarningSprite_Left" type="Sprite2D" parent="Warnings/Sides_MiddleRange" node_paths=PackedStringArray("player", "warning_manager")]
modulate = Color(1, 1, 1, 0.498039)
position = Vector2(207, 414.969)
rotation = -3.14159
scale = Vector2(3.54038, 2.0206)
texture = ExtResource("14_upo2c")
script = ExtResource("13_kxryw")
player = NodePath("../../../Player")
position_offset = Vector2i(1, 0)
visible_ranges = Array[int]([2])
warning_manager = NodePath("../../../WarningManager")

[node name="WarningSprite_Right" type="Sprite2D" parent="Warnings/Sides_MiddleRange" node_paths=PackedStringArray("player", "warning_manager")]
modulate = Color(1, 1, 1, 0.498039)
position = Vector2(955, 412)
rotation = 3.14159
scale = Vector2(-3.5, 2)
texture = ExtResource("14_upo2c")
script = ExtResource("13_kxryw")
player = NodePath("../../../Player")
position_offset = Vector2i(-1, 0)
visible_ranges = Array[int]([2])
warning_manager = NodePath("../../../WarningManager")

[node name="WarningSprite_Left_In" type="Sprite2D" parent="Warnings/Sides_MiddleRange" node_paths=PackedStringArray("player", "warning_manager")]
modulate = Color(1, 1, 1, 0.498039)
position = Vector2(406, 408)
rotation = -3.14159
scale = Vector2(2.8685, 1.21655)
texture = ExtResource("14_upo2c")
script = ExtResource("13_kxryw")
player = NodePath("../../../Player")
position_offset = Vector2i(1, -1)
visible_ranges = Array[int]([2])
warning_manager = NodePath("../../../WarningManager")

[node name="WarningSprite_Right_In" type="Sprite2D" parent="Warnings/Sides_MiddleRange" node_paths=PackedStringArray("player", "warning_manager")]
modulate = Color(1, 1, 1, 0.498039)
position = Vector2(765, 405)
rotation = 3.14159
scale = Vector2(-2.8, 1.2)
texture = ExtResource("14_upo2c")
script = ExtResource("13_kxryw")
player = NodePath("../../../Player")
position_offset = Vector2i(-1, -1)
visible_ranges = Array[int]([2])
warning_manager = NodePath("../../../WarningManager")

[node name="Sides_LongRange" type="Node2D" parent="Warnings"]

[node name="WarningSprite_Left" type="Sprite2D" parent="Warnings/Sides_LongRange" node_paths=PackedStringArray("player", "warning_manager")]
modulate = Color(1, 1, 1, 0.498039)
position = Vector2(173.244, 398.241)
rotation = -3.14159
scale = Vector2(3.14401, 3.0044)
texture = ExtResource("14_upo2c")
script = ExtResource("13_kxryw")
player = NodePath("../../../Player")
position_offset = Vector2i(1, 0)
visible_ranges = Array[int]([3])
warning_manager = NodePath("../../../WarningManager")

[node name="WarningSprite_Left_In" type="Sprite2D" parent="Warnings/Sides_LongRange" node_paths=PackedStringArray("player", "warning_manager")]
modulate = Color(1, 1, 1, 0.498039)
position = Vector2(345, 392)
rotation = -3.14159
scale = Vector2(2.60726, 1.67892)
texture = ExtResource("14_upo2c")
script = ExtResource("13_kxryw")
player = NodePath("../../../Player")
position_offset = Vector2i(1, -1)
visible_ranges = Array[int]([3])
warning_manager = NodePath("../../../WarningManager")

[node name="WarningSprite_Left_In2" type="Sprite2D" parent="Warnings/Sides_LongRange" node_paths=PackedStringArray("player", "warning_manager")]
modulate = Color(1, 1, 1, 0.498039)
position = Vector2(478.739, 389.003)
rotation = -3.14159
scale = Vector2(1.71764, 0.906355)
texture = ExtResource("14_upo2c")
script = ExtResource("13_kxryw")
player = NodePath("../../../Player")
position_offset = Vector2i(1, -2)
visible_ranges = Array[int]([3])
warning_manager = NodePath("../../../WarningManager")

[node name="WarningSprite_Right" type="Sprite2D" parent="Warnings/Sides_LongRange" node_paths=PackedStringArray("player", "warning_manager")]
modulate = Color(1, 1, 1, 0.498039)
position = Vector2(980, 394)
rotation = 3.14159
scale = Vector2(-3.137, 2.957)
texture = ExtResource("14_upo2c")
script = ExtResource("13_kxryw")
player = NodePath("../../../Player")
position_offset = Vector2i(-1, 0)
visible_ranges = Array[int]([3])
warning_manager = NodePath("../../../WarningManager")

[node name="WarningSprite_Right_In" type="Sprite2D" parent="Warnings/Sides_LongRange" node_paths=PackedStringArray("player", "warning_manager")]
modulate = Color(1, 1, 1, 0.498039)
position = Vector2(811, 390)
rotation = 3.14159
scale = Vector2(-2.6, 1.648)
texture = ExtResource("14_upo2c")
script = ExtResource("13_kxryw")
player = NodePath("../../../Player")
position_offset = Vector2i(-1, -1)
visible_ranges = Array[int]([3])
warning_manager = NodePath("../../../WarningManager")

[node name="WarningSprite_Right_In2" type="Sprite2D" parent="Warnings/Sides_LongRange" node_paths=PackedStringArray("player", "warning_manager")]
modulate = Color(1, 1, 1, 0.498039)
position = Vector2(681, 386)
rotation = 3.14159
scale = Vector2(-1.844, 0.945)
texture = ExtResource("14_upo2c")
script = ExtResource("13_kxryw")
player = NodePath("../../../Player")
position_offset = Vector2i(-1, -2)
visible_ranges = Array[int]([3])
warning_manager = NodePath("../../../WarningManager")

[node name="ScreenSurround" type="Node2D" parent="Warnings"]

[node name="WarningSprite_Surround" type="Sprite2D" parent="Warnings/ScreenSurround" node_paths=PackedStringArray("player", "warning_manager")]
modulate = Color(1, 1, 1, 0.498039)
position = Vector2(576, 566)
rotation = 1.5708
scale = Vector2(1.002, 1152)
texture = SubResource("GradientTexture1D_c3ry5")
script = ExtResource("13_kxryw")
player = NodePath("../../../Player")
warning_manager = NodePath("../../../WarningManager")

[node name="WarningSprite_Surround2" type="Sprite2D" parent="Warnings/ScreenSurround" node_paths=PackedStringArray("player", "warning_manager")]
modulate = Color(1, 1, 1, 0.498039)
position = Vector2(576, 82)
rotation = -1.5708
scale = Vector2(1.002, 1152)
texture = SubResource("GradientTexture1D_c3ry5")
script = ExtResource("13_kxryw")
player = NodePath("../../../Player")
warning_manager = NodePath("../../../WarningManager")

[node name="WarningSprite_Surround3" type="Sprite2D" parent="Warnings/ScreenSurround" node_paths=PackedStringArray("player", "warning_manager")]
modulate = Color(1, 1, 1, 0.498039)
position = Vector2(1120, 324)
scale = Vector2(1, 548)
texture = SubResource("GradientTexture1D_c3ry5")
script = ExtResource("13_kxryw")
player = NodePath("../../../Player")
warning_manager = NodePath("../../../WarningManager")

[node name="WarningSprite_Surround4" type="Sprite2D" parent="Warnings/ScreenSurround" node_paths=PackedStringArray("player", "warning_manager")]
modulate = Color(1, 1, 1, 0.498039)
position = Vector2(32, 324)
rotation = -3.14159
scale = Vector2(1, 548)
texture = SubResource("GradientTexture1D_c3ry5")
script = ExtResource("13_kxryw")
player = NodePath("../../../Player")
warning_manager = NodePath("../../../WarningManager")

[node name="InputDisplay" parent="." node_paths=PackedStringArray("player") instance=ExtResource("17_gjpcg")]
layout_mode = 1
player = NodePath("../Player")
